--- a/index.html
+++ b/index.html
@@ -726,6 +726,17 @@
   border-radius: 8px;
   font-weight: 600;
 }
+    /* ===== HEADER WIDTH FIX ===== */
+.site-header {
+  width: 100%;
+}
+
+.header-inner {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
   
   </style>
 </head>
