--- a/index.html
+++ b/index.html
@@ -760,6 +760,24 @@
     font-size: 24px;
   }
 }
+    /* FIX 5: FORCE HEADER HEIGHT SLIM */
+.site-header {
+  padding: 0 !important;
+}
+
+.header-inner {
+  min-height: 56px;
+  padding-top: 6px !important;
+  padding-bottom: 6px !important;
+}
+    /* FIX 6: LOGO SIZE CONTROL */
+.logo-img {
+  height: 36px !important;
+}
+    /* FIX 7: DESKTOP NAV ALIGN */
+.nav-desktop {
+  align-items: center;
+}
   
   </style>
 </head>
