--- a/index.html
+++ b/index.html
@@ -454,27 +454,28 @@
       <p class="section-subtitle">Browse our most researched sectors to find exactly what you need.</p>
 
       <div class="grid-3">
-        <div class="card category-card">
-          <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=500&q=80"
-            alt="Tech" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">Tech & Gadgets</h3>
-          </div>
-        </div>
-        <div class="card category-card">
-          <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=500&q=80"
-            alt="Software" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">Software & Tools</h3>
-          </div>
-        </div>
-        <div class="card category-card">
-          <img src="https://images.unsplash.com/photo-1583847661884-3b66d123d9b4?auto=format&fit=crop&w=500&q=80"
-            alt="Home" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">Home & Living</h3>
-          </div>
-        </div>
+
+  <div class="card category-card">
+    <img src="tech-and-gadgets.webp" alt="Tech and Gadgets" class="card-img">
+    <div class="card-body">
+      <h3 class="card-title">Tech & Gadgets</h3>
+    </div>
+  </div>
+
+  <div class="card category-card">
+    <img src="software-and-tools.webp" alt="Software and Tools" class="card-img">
+    <div class="card-body">
+      <h3 class="card-title">Software & Tools</h3>
+    </div>
+  </div>
+
+  <div class="card category-card">
+    <img src="home-and-living.webp" alt="Home and Living" class="card-img">
+    <div class="card-body">
+      <h3 class="card-title">Home & Living</h3>
+    </div>
+  </div>
+
       </div>
     </div>
   </section>
