--- a/index.html
+++ b/index.html
@@ -481,46 +481,53 @@
   </section>
 
   <section class="section-pad" id="guides">
-    <div class="container">
-      <h2 class="section-title">Top Buying Guides</h2>
-      <p class="section-subtitle">Deep dives and expert analysis on this month's trending products.</p>
+  <div class="container">
+    <h2 class="section-title">Top Buying Guides</h2>
+    <p class="section-subtitle">
+      Deep dives and expert analysis on this month's trending products.
+    </p>
 
-      <div class="grid-3">
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1546868871-7041f2a55e12?auto=format&fit=crop&w=500&q=80"
-            alt="Smart Watches" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">The Best Smartwatches for 2024</h3>
-            <p class="card-text">We tested 15 top models to find the best balance of battery life, fitness tracking, and
-              style.</p>
-            <a href="#" class="card-link">Read guide →</a>
-          </div>
-        </article>
+    <div class="grid-3">
 
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80"
-            alt="Project Management" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">Top 5 Project Management Tools</h3>
-            <p class="card-text">Simplify your workflow. We compare Asana, Trello, and Monday.com for small businesses.
-            </p>
-            <a href="#" class="card-link">Read guide →</a>
-          </div>
-        </article>
+      <!-- Guide 1: Smartphones -->
+      <article class="card">
+        <img src="smartphones-guide.webp" alt="Best Smartphones Under 500" class="card-img">
+        <div class="card-body">
+          <h3 class="card-title">Best Smartphones Under $500</h3>
+          <p class="card-text">
+            We researched and compared the best smartphones under $500 based on performance, camera, battery, and value.
+          </p>
+          <a href="best-smartphones-under-500.html" class="card-link">Read guide →</a>
+        </div>
+      </article>
 
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1522204523234-8729aa6e3d5f?auto=format&fit=crop&w=500&q=80"
-            alt="Home Office" class="card-img">
-          <div class="card-body">
-            <h3 class="card-title">Building the Ultimate Home Office</h3>
-            <p class="card-text">From ergonomic chairs to standing desks, here is everything you need for a productive
-              setup.</p>
-            <a href="#" class="card-link">Read guide →</a>
-          </div>
-        </article>
-      </div>
+      <!-- Guide 2: Laptops -->
+      <article class="card">
+        <img src="laptops-guide.webp" alt="Best Laptops for Students" class="card-img">
+        <div class="card-body">
+          <h3 class="card-title">Best Laptops for Students</h3>
+          <p class="card-text">
+            A complete comparison of student-friendly laptops focusing on performance, portability, and affordability.
+          </p>
+          <a href="best-laptops-for-students.html" class="card-link">Read guide →</a>
+        </div>
+      </article>
+
+      <!-- Guide 3: Headphones -->
+      <article class="card">
+        <img src="headphones-guide.webp" alt="Best Headphones for Work" class="card-img">
+        <div class="card-body">
+          <h3 class="card-title">Best Headphones for Work</h3>
+          <p class="card-text">
+            From noise cancellation to comfort, these are the best headphones for productivity and office use.
+          </p>
+          <a href="best-headphones-for-work.html" class="card-link">Read guide →</a>
+        </div>
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="section-pad bg-gray" id="trust">
     <div class="container">
