--- a/index.html
+++ b/index.html
@@ -162,32 +162,48 @@
 
     /* Mobile Menu */
     .mobile-menu {
-      position: absolute;
-      top: var(--header-height);
-      left: 0;
-      width: 100%;
-      background: var(--white);
-      border-bottom: 1px solid #e2e8f0;
-      padding: 1rem 0;
-      /* Hidden state */
-      opacity: 0;
-      transform: translateY(-20px);
-      pointer-events: none;
-      transition: opacity 0.3s ease, transform 0.3s ease;
-      box-shadow: var(--shadow-md);
-    }
+  position: fixed;
+  top: var(--header-height);
+  left: 0;
 
-    .mobile-menu.active {
-      opacity: 1;
-      transform: translateY(0);
-      pointer-events: all;
-    }
+  width: 100vw;
+  height: calc(100vh - var(--header-height));
 
+  background: var(--white);
+  z-index: 2000;
+
+  padding-top: 20px;
+
+  /* Hidden state */
+  opacity: 0;
+  transform: translateY(-10px);
+  pointer-events: none;
+
+  transition: opacity 0.25s ease, transform 0.25s ease;
+}
+
+.mobile-menu.active {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: all;
+}
+
+.mobile-menu a {
+  display: block;
+  padding: 16px 20px;
+  font-weight: 600;
+  border-bottom: 1px solid #f1f5f9;
+}
     .mobile-menu a {
-      display: block;
-      padding: 12px 20px;
-      font-weight: 600;
-      border-bottom: 1px solid #f1f5f9;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.2px;
+    }
+    .mobile-menu a:active {
+  background: #f1f5f9;
+    }
+    .mobile-menu a {
+  padding: 18px 20px;
     }
 
     /* =========================================
@@ -406,6 +422,20 @@ body.menu-open {
   overflow: hidden;
   height: 100vh;
 }
+    .menu-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(15, 23, 42, 0.55); /* dark slate */
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s ease;
+  z-index: 1500;
+}
+
+.menu-overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
   </style>
 </head>
 
@@ -444,6 +474,7 @@ body.menu-open {
     <a href="#">How We Review</a>
     <a href="#">About</a>
   </nav>
+  <div class="menu-overlay" id="menuOverlay"></div>
 
   <section class="hero">
     <div class="container">
@@ -582,6 +613,7 @@ document.addEventListener('DOMContentLoaded', () => {
   const menu = document.getElementById('mobileMenu');
   const bars = toggle.querySelectorAll('.bar');
   const mobileLinks = document.querySelectorAll('.mobile-menu a');
+  const overlay = document.getElementById('menuOverlay');
 
   function resetBars() {
     bars[0].style.transform = 'none';
@@ -594,6 +626,7 @@ document.addEventListener('DOMContentLoaded', () => {
     e.stopPropagation();
     menu.classList.toggle('active');
     document.body.classList.toggle('menu-open');
+    overlay.classList.toggle('active');
 
     if (menu.classList.contains('active')) {
       bars[0].style.transform = 'rotate(45deg) translate(5px, 6px)';
@@ -609,6 +642,7 @@ document.addEventListener('DOMContentLoaded', () => {
     link.addEventListener('click', () => {
       menu.classList.remove('active');
       document.body.classList.remove('menu-open');
+      overlay.classList.remove('active');
       resetBars();
     });
   });
